deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  labels:
    app: nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        livenessProbe:

          httpGet:

            path: /                # The path to check for the liveness probe

            port: 80               # The port to check on

          initialDelaySeconds: 15  # Wait this many seconds before starting the probe

          periodSeconds: 10        # Check the probe every 10 seconds

        readinessProbe:

          httpGet:

            path: /                # The path to check for the readiness probe

            port: 80               # The port to check on

          initialDelaySeconds: 5   # Wait this many seconds before starting the probe

          periodSeconds:
