ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: "rocklin.co.in"
    http:
      paths:
      - pathType: Prefix
        path: "/demo"
        backend:
          service:
            name: service
            port:
              number: 80
